--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
       google.charts.load('current', {'packages':['corechart']});
 
       // Set a callback to run when the Google Visualization API is loaded.
-      google.charts.setOnLoadCallback(drawChart);
+      google.charts.setOnLoadCallback(drawChart1);
+      google.charts.setOnLoadCallback(drawChart2);
 
       // Callback that creates and populates a data table,
       // instantiates the pie chart, passes in the data and
       // draws it.
-      function drawChart() {
+      function drawChart1() {
 
         // Create the data table.
         var data = new google.visualization.DataTable();
@@ -34,12 +35,46 @@
         // Set chart options
         var options = {'title':'What Kind Of Pizza I Ate Last Night',
                        'width':800,
-                       'height':600};
+                       'height':600,
+                       'legend': 'left',
+                       'is3D': true
+                     };
 
         // Instantiate and draw our chart, passing in some options.
-        var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
+        var chart = new google.visualization.PieChart(document.getElementById('chart_div1'));
         chart.draw(data, options);
       }
+
+      // Second Chart 
+
+      function drawChart2() {
+
+        // Create the data table.
+        var data = new google.visualization.DataTable();
+        data.addColumn('string', 'Topping');
+        data.addColumn('number', 'Slices');
+        data.addRows([
+          ['Sausage', 3],
+          ['Vegi', 1],
+          ['Cheese', 1],
+          ['Hawaiian', 1],
+          ['Pepperoni', 2]
+        ]);
+
+        // Set chart options
+        var options = {'title':'What Kind Of Pizza I Ate Last Night',
+                       'width':800,
+                       'height':600,
+                       'legend': 'left',
+                       'is3D': true
+                     };
+
+        // Instantiate and draw our chart, passing in some options.
+        var chart = new google.visualization.PieChart(document.getElementById('chart_div2'));
+        chart.draw(data, options);
+      }    
+ 
+
     </script>
 
 
@@ -50,7 +85,8 @@
   <h1>Using a charting library</h1>
 
   <!--Div that will hold the pie chart-->
-  <div id="chart_div"></div>
+  <div id="chart_div1" width="800" height="600"></div>
 
+ <div id="chart_div2" width="800" height="600"></div>
 </body>
 </html>
