--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Charting Library</title>
+  
+
  <!--Load the AJAX API-->
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   
   <script type="text/javascript">
 
       // Load the Visualization API and the corechart package.
-      google.charts.load('current', {'packages':['corechart']});
+      google.charts.load('current', {'packages':['corechart','bar']});
 
       // Set a callback to run when the Google Visualization API is loaded.
       google.charts.setOnLoadCallback(drawChart1);
@@ -18,31 +20,29 @@
       // Callback that creates and populates a data table,
       // instantiates the pie chart, passes in the data and
       // draws it.
-      function drawChart1() {
-
-        // Create the data table.
-        var data = new google.visualization.DataTable();
-        data.addColumn('string', 'Topping');
-        data.addColumn('number', 'Slices');
-        data.addRows([
-          ['Sausage', 3],
-          ['Vegi', 1],
-          ['Cheese', 1],
-          ['Hawaiian', 1],
-          ['Pepperoni', 2]
+   function drawChart1() {
+        var data = google.visualization.arrayToDataTable([
+          ['Year', 'Sales', 'Expenses', 'Profit'],
+          ['2014', 1000, 400, 200],
+          ['2015', 1170, 460, 250],
+          ['2016', 660, 1120, 300],
+          ['2017', 1030, 540, 350]
         ]);
 
-        // Set chart options
-        var options = {'title':'What Kind Of Pizza I Ate Last Night',
-                       'width':800,
-                       'height':600,
-                       'legend': 'left',
-                       'is3D': true
-                     };
+        var options = {
+          chart: {
+            title: 'Company Performance',
+            subtitle: 'Sales, Expenses, and Profit: 2014-2017',
+            backgroundColor: '#E4E4E4'
+          },
+          bars: 'horizontal' // Required for Material Bar Charts.
+        };
 
-        // Instantiate and draw our chart, passing in some options.
-        var chart = new google.visualization.PieChart(document.getElementById('chart_div1'));
-        chart.draw(data, options);
+        var chart = new google.charts.Bar(document.getElementById('chart_div1'));
+
+        chart.draw(data, google.charts.Bar.convertOptions(options));
+
+
       }
 
       // Second Chart 
@@ -87,6 +87,6 @@
   <!--Div that will hold the pie chart-->
   <div id="chart_div1" width="800" height="600"></div>
 
- <div id="chart_div2" width="800" height="600"></div>
+  <div id="chart_div2" width="800" height="600"></div>
 </body>
 </html>
