added timeline chart

--- a/index.html
+++ b/index.html
@@ -11,11 +11,78 @@
   <script type="text/javascript">
 
       // Load the Visualization API and the corechart package.
-      google.charts.load('current', {'packages':['corechart','bar']});
+      google.charts.load('current', {'packages':['corechart','bar','timeline']});
 
       // Set a callback to run when the Google Visualization API is loaded.
-      google.charts.setOnLoadCallback(drawChart1);
-      google.charts.setOnLoadCallback(drawChart2);
+      //google.charts.setOnLoadCallback(drawChart1);
+     // google.charts.setOnLoadCallback(drawChart2);
+     // google.charts.setOnLoadCallback(drawDonationChart);
+      google.charts.setOnLoadCallback(drawStudyTimeLine);
+      google.charts.setOnLoadCallback(drawStudyBar);
+
+
+   function drawStudyTimeLine() { 
+   
+    var container = document.getElementById('study-timeline');
+        var chart = new google.visualization.Timeline(container);
+        var dataTable = new google.visualization.DataTable();
+
+        dataTable.addColumn({ type: 'string', id: 'Phase Of Study' });
+        dataTable.addColumn({ type: 'date', id: 'Start' });
+        dataTable.addColumn({ type: 'date', id: 'End' });
+        dataTable.addRows([
+          [ 'General ED reqs', new Date(2018, 8, 1),  new Date(2019, 4, 1) ],
+          [ 'Choose Major',    new Date(2019, 5, 1),  new Date(2019, 7, 1) ],
+          [ '2 Major Class',    new Date(2019, 8, 1),  new Date(2020, 4, 1) ],
+          [ '12 Major Class',  new Date(2020, 8, 1),  new Date(2022, 4, 1) ]
+          ]);
+
+        chart.draw(dataTable);
+      }
+
+
+
+   function drawStudyBar() { }
+
+
+
+
+
+
+
+
+
+
+
+// Function 
+   function drawDonationChart() { 
+   
+           var data = google.visualization.arrayToDataTable([
+          ['Donation allocation', 'costs'],
+          ['Administrative',   4],
+          ['Fundraising',      16],
+          ['Youth programs',  36],
+          ['Adult programs', 44]
+          
+        ]);
+
+        var options = {
+          title: 'My Daily Activities',
+          backgroundColor: 'lightblue',
+          pieHole: 0.4,
+             slices: [
+             {color:'#8AD1C2'}, 
+             {color:'#9F8AD1'},
+             {color:'#D18A99'},
+             {color:'#BCD18A'}
+           ]
+        };
+
+        var chart = new google.visualization.PieChart(document.getElementById('donation-chart'));
+
+        chart.draw(data, options);
+      }
+
 
       // Callback that creates and populates a data table,
       // instantiates the pie chart, passes in the data and
@@ -88,5 +155,13 @@
   <div id="chart_div1" width="800" height="600"></div>
 
   <div id="chart_div2" width="800" height="600"></div>
+
+  <div id="donation-chart" width="800" height="600"></div>
+
+
+  <div id="study-timeline" width="800" height="600"></div>
+
+  <div id="study-bar" width="800" height="600"></div>
+
 </body>
 </html>
