--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       //google.charts.setOnLoadCallback(drawChart1);
      // google.charts.setOnLoadCallback(drawChart2);
      // google.charts.setOnLoadCallback(drawDonationChart);
-      google.charts.setOnLoadCallback(drawStudyTimeLine);
+      //google.charts.setOnLoadCallback(drawStudyTimeLine);
       google.charts.setOnLoadCallback(drawStudyBar);
 
 
@@ -40,7 +40,10 @@
         chart.draw(dataTable);
       }
 
+   function showTimeLineChart () {
 
+    drawStudyTimeLine(); 
+   }
 
    function drawStudyBar() { }
 
@@ -162,6 +165,8 @@
   <div id="study-timeline" width="800" height="600"></div>
 
   <div id="study-bar" width="800" height="600"></div>
+
+  <button onclick="showTimeLineChart()"> Show Phases of Study</button>
 
 </body>
 </html>
